feat(api): reset
